--- a/locales/ja.json
+++ b/locales/ja.json
@@ -5,16 +5,16 @@
   "menu": {
     "home": "ホーム",
     "bh_speaker_units_db": "BH向けスピーカーユニットたち",
-    "speaker_components_list": "BH向けスピーカーユニット データベース",
-    "grouped_by_baffle_hole_diameter": "バッフル径別にグループ化"
+    "speaker_components_list": "スピーカーユニット データベース",
+    "grouped_by_baffle_hole_diameter": "バッフル径別にグループ化",
+    "grouped_by_categories": "カテゴリー毎にグループ化"
   },
 
-  "backloadedhorn_speakers": {
+  "speakers": {
     "title": "BH向けスピーカーユニット データベース",
     "baffle_hole_diameter": "バッフル穴径",
     "grouped_by_baffle_hole_diameter": "バッフル径別にグループ化した一覧"
   },
-
   "categories": {
     "title": "カテゴリー毎の一覧",
     "description": "カテゴリー毎の一覧です"
