--- a/locales/en.json
+++ b/locales/en.json
@@ -10,13 +10,19 @@
     "grouped_by_categories": "Grouped by Categories"
   },
 
-  "speakers": {
-    "title": "Speaker Units(Components) Database for Back-loaded Horn.",
-    "baffle_hole_diameter": "Baffle Hole Diameter",
-    "grouped_by_baffle_hole_diameter": "Grouped by Baffle Hole Diameter"
-  },
-  "categories": {
-    "title": "Grouped by Category",
-    "description": "Grouped by Category"
+  "speakers_dir": {
+    "title": "Speaker Units(Components) Database",
+    "abst": "登録されているスピーカーユニット全部表示",
+
+    "for_backloadedhorn": "BH向けスピーカーユニット一覧",
+
+    "grouped_by_baffle_hole_diameter": {
+      "title": "Grouped by Baffle Hole Diameter",
+      "baffle_hole_diameter": "Baffle Hole Diameter"
+    },
+
+    "grouped_by_categories": {
+      "title": "Grouped by Categories"
+    }
   }
 }
