--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -14,6 +14,8 @@
     "title": "スピーカーユニット データベース",
     "abst": "登録されているスピーカーユニット全部表示",
 
+    "speakers_id_title": "スピーカーユニット詳細",
+
     "for_backloadedhorn": "BH向けスピーカーユニット一覧",
 
     "grouped_by_baffle_hole_diameter": {
@@ -24,5 +26,15 @@
     "grouped_by_categories": {
       "title": "カテゴリー毎にグループ化した一覧"
     }
+  },
+
+  "breadcrumbs": {
+    "home": "ホーム",
+    "speakers": "スピーカー",
+    "grouped_by_baffle_hole_diameter": "バッフル開口径でグループ化",
+    "grouped_by_categories": "カテゴリーでグループ化",
+    "backloaded_horn_speakers": "バックロードホーンスピーカー",
+    "categories": "カテゴリー",
+    "details": "詳細"
   }
 }
